# trie-again

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.py  pyproject.toml
tests/: conftest.py  en_cleaned.json  test_trie.py  test_trie_speed.py
trie/: trie.py
trie_again/: __init__.py  trie.py
trie_again/_ext/: Trie.cpp  Trie.h
